--- a/public/alphabet.html
+++ b/public/alphabet.html
@@ -348,7 +348,7 @@
                 
                         // Go home function
             function goHome() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }
                 // Set up sound button
                 soundButton.addEventListener('click', () => {
