--- a/public/colors.html
+++ b/public/colors.html
@@ -608,7 +608,7 @@
             
             // Home button functionality
             function goToHomePage() {
-                window.location.href = 'main.html';
+                window.location.href = 'index.html';
             }
             
             homeBtn.addEventListener('click', goToHomePage);
