--- a/public/food.html
+++ b/public/food.html
@@ -449,7 +449,7 @@
                 
                  // Go home function
             function goHome() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }
 
             // Shuffle and display items
