--- a/public/shape.html
+++ b/public/shape.html
@@ -493,7 +493,7 @@
 
             // Go home function
             function goHome() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }
 
             // Generate shapes reference
