--- a/public/animal.html
+++ b/public/animal.html
@@ -375,7 +375,7 @@
 
                  // Go home function
             function goHome() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }
 
             // Shuffle and display items
