--- a/public/numbers.html
+++ b/public/numbers.html
@@ -346,7 +346,7 @@
                 
                         // Go home function
             function goHome() {
-                window.location.href = "main.html";
+                window.location.href = "index.html";
             }
 
                 // Set up count button
